--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -43,7 +43,8 @@
 
 %header-content {
   color: $red-top;
-  font-size: 1.375em;
+  font-size: 22px;
+  font-size: 1.375rem;
   font-family: $oswaldbook;
   text-transform: uppercase;
 }
@@ -58,38 +59,20 @@
   @extend %single-transition;
 }
 
-%box-shadow // box shadow for teaser boxes "home", "bildergalerie"
+%box-shadow // box shadow for teaser boxes flexslider
 {
   position: relative;
-  // border: 1px solid $color3;
   border: none;
-  // padding: 12px 0;
-  // padding: .75rem 0;
-
   @include box-shadow(0px 1px 4px -3px rgba(0, 0, 0, 0.3)); //, 0 0 40px rgba(0, 0, 0, 0.1) inset);
-  behavior: url('/sites/all/themes/gemeinde-gabersdorf/PIE/PIE.php'); // polyfill
+  behavior: url('/sites/all/themes/adventures/PIE/PIE.php'); // polyfill
   border-radius: none !important;
   &:before, &:after {
   content: " ";
   position: absolute;
   z-index: -2;
-  //   content: '';
-  //   position: absolute;
-  //   z-index: -1;
-  //   left: 40px;
-  //   bottom: 15px;
-  //   width: 80%;
-  //   max-width: 300px;
-  //   max-height: 100px;
-  //   height: 35%;
-  //   @include box-shadow (0px 10px 12px rgba(0, 0, 0, 0.35));
-  //   @include transform(skew(-15deg) rotate(-6deg));
+
   }
     &:before {
-    // top: 10px;
-    // top: .625rem;
-    // bottom: 10px;
-    // bottom: .625rem;
     top: 0;
     bottom: 0;
     right: 32px;//50%;
@@ -101,12 +84,35 @@
     border-radius: 100px / 10px; //10px / 100px;
 
   }
-  &:after {
-    // right: 40px;
-    // left: auto;
-    // @include transform(skew(15deg) rotate(6deg));
-  }
+}
 
+%box-shadow-bottom // box shadow for teasers
+{
+  position: relative;
+  border: none;
+  background:#FFF;
+  @include box-shadow(0px 1px 4px -10px rgba(0, 0, 0, 0.3)); //, 0 0 40px rgba(0, 0, 0, 0.1) inset);
+  behavior: url('/sites/all/themes/adventures/PIE/PIE.php'); // polyfill
+  border-radius: none !important;
+  &:before, &:after {
+  content: " ";
+  position: absolute;
+  z-index: -2;
+
+  }
+    &:before {
+    top: 32px;
+    top: 2rem;
+    bottom: 0;
+    right: 32px;//50%;
+    right: 2rem;
+    left: 32px;
+    right: 2rem;
+    // left: .625rem;
+    @include box-shadow(0 0 15px rgba(0,0,0,0.6));
+    border-radius: 100px / 10px; //10px / 100px;
+
+  }
 }
 
 
@@ -116,7 +122,7 @@
   border: 1px solid #000;
   background: #FFF;
   @include box-shadow(0px 10px 10px -10px rgba(0, 0, 0, 0.27), 0 0 40px rgba(#000, 0.1) inset);
-  behavior: url('/sites/all/themes/gemeinde-gabersdorf/PIE/PIE.php'); // polyfill
+  behavior: url('/sites/all/themes/adventures/PIE/PIE.php'); // polyfill
   &:before, &:after {
     content: '';
     position: absolute;
