--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -110,6 +110,17 @@ $blue-bottom: rgb(0, 105, 180);
 $grey-top: rgb(227,226,227);
 $grey-bottom: rgb(151,147,146);
 
+$orange-top: rgb(252,221,0);
+$orange-bottom: rgb(195,96,23);
+
+$violet-top: rgb(204,138,187);
+$violet-bottom: rgb(137,74,149);
+
+$green-top: rgb(174,189,21);
+$green-bottom: rgb(70,125,39);
+// Font sizes
+
+
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
 
